ticket 2 - built restful endpoints